--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "node-typescript",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "dev": "nodemon src/entry.ts",
     "dev:debug": "nodemon --inspect src/entry.ts",
     "fmt": "prettier --write '**/*.{js,ts}'",
@@ -15,7 +15,10 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/supertest": "^2.0.7",
+    "awesome-typescript-loader": "5.2.1",
+    "clean-webpack-plugin": "2.0.1",
     "express": "^4.16.4",
+    "friendly-errors-webpack-plugin": "1.7.0",
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
@@ -24,6 +27,8 @@
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
     "winston": "^3.2.1"
   },
   "jest": {
