--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "name": "node-typescript",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack",
+    "build": "tsc",
+    "build:clean": "rimraf dist",
+    "build:prod": "run-s build:clean build",
     "dev": "nodemon src/entry.ts",
     "dev:debug": "nodemon --inspect src/entry.ts",
     "fmt": "prettier --write '**/*.{js,ts}'",
     "fmt:p": "prettier-package-json --write",
-    "prod": "npm run build && node dist/entry.js",
+    "prod": "run-s build:prod && node dist/entry.js",
     "test": "jest --no-cache"
   },
   "dependencies": {
@@ -16,19 +18,17 @@
     "@types/jest": "24.0.11",
     "@types/supertest": "2.0.7",
     "awesome-typescript-loader": "5.2.1",
-    "clean-webpack-plugin": "2.0.1",
     "express": "4.16.4",
-    "friendly-errors-webpack-plugin": "1.7.0",
     "jest": "24.5.0",
     "nodemon": "1.18.10",
+    "npm-run-all": "4.1.5",
     "prettier": "1.16.4",
     "prettier-package-json": "2.1.0",
+    "rimraf": "2.6.3",
     "supertest": "4.0.2",
     "ts-jest": "24.0.0",
     "ts-node": "8.0.3",
     "typescript": "3.3.4000",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.3.0",
     "winston": "3.2.1"
   },
   "jest": {
